--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html long="en">
   <head>
     <meta charset="utf8">
-    <title>My First Bitstarter</title>
+    <title>FamHub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -106,7 +106,7 @@
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
           </button>
-	  <a class="brand" href="#">Bitstarter</a>
+	  <a class="brand" href="#">FamHub</a>
 	  <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active"><a href="#">Home</a></li>
@@ -122,12 +122,12 @@
     <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>FamHub</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <p class="lead">One Sentence Description.</p>
+	  <p class="lead">The central hub for managing the home and family.</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
