More additions to famhub

--- a/index.html
+++ b/index.html
@@ -139,25 +139,25 @@
 	    <div class="statistics">
 	      <div class="span4">
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>0</h3> <p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>$0</h3> <p>of $10,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>49</h3> <p>days left</p>
 		</div>
 	      </div>	
 	    </div>
 	  </div>
 	  <div class="span10 offset1">
 	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
+	      <div class="bar bar-success" style="width: 1%;"></div>
+	      <div class="bar bar-warning" style="width: 99%;"></div>
 	    </div>
 	  </div>
 	  <div class="span6 offset3 order">
@@ -175,7 +175,7 @@
 	</div>
 	<div class="span5 copy">
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit retrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla ante lectus, a pellentesque lacus dignissim ac. Sed volutpat lorem ut congue malesuada. In facilisis sclerisque turpis sed lacinia. Donec in orci lectus. Donec auctor semper quam, eget rhoncus purus fringilla id. Phasellus id nibh eu risus ultrices adipiscing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit retrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fingilla.
+	    The FabHub provides you with access to your home's important metrics such as temperature control, home automation and security.  FabHub also serves as the family's information hub including schedules, shopping lists and important dates.  Keep your family informed and manage all aspects of your home from your phone, tablet  computer.
           </p>
 	</div>
       </div>
