--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
 	</div>
 	<div class="span5 copy">
 	  <p>
-	    The FabHub provides you with access to your home's important metrics such as temperature control, home automation and security.  FabHub also serves as the family's information hub including schedules, shopping lists and important dates.  Keep your family informed and manage all aspects of your home from your phone, tablet  computer.
+	    The FabHub provides you with access to your home's important metrics such as temperature control, home automation and security.  FabHub also serves as the family's information hub including schedules, shopping lists and important dates.  Keep your family informed and manage all aspects of your home from your phone, 
           </p>
 	</div>
       </div>
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 	  <p>
-    	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit retrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla ante lectus, a pellentesque lacus dignissim ac. Sed volutpat lorem ut congue malesuada. In facilisis sclerisque turpis sed lacinia. Donec in orci lectus. Donec auctor semper quam, eget rhoncus purus fringilla id. Phasellus id nibh eu risus ultrices adipiscing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit retrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fingilla.
+	    This is the section where I describe a couple of screen shots about the two main functions: Home and Family.....
 	  </p>
 	</div>
 	<div class="span5 asset">
