--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
 	    </div>
 	  </div>
 	  <div class="span6 offset3 order">
-	    <button class="btn btn-success btn-large">Preorder</button>
+	    <a class="coinbase-button" data-code="0126779a1f72ee4bbcb02bc18f28dc3a" data-button-style="custom_large" href="https://coinbase.com/checkouts/0126779a1f72ee4bbcb02bc18f28dc3a" data-button-text="Preorder with Bitcoin">Preorder With Bitcoin</a>
+	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	  </div>
 	  <div class="span8 offset2 social">
 	    <!-- AddThis Button BEGIN -->
